<resources>
    <string name="app_name">Friends</string>
    <string name="title_activity_map_friend">MapFriend</string>
    <string name="sign_in">Sign in</string>
    <string name="login">LOGIN</string>
    <string name="don_t_register">DON\'T REGISTER</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="or_sign_in_with">or sign in with</string>
    <string name="register">REGISTER</string>
    <string name="todo">TODO</string>
    <string name="tod">TOD</string>
    <string name="too">TOO</string>
    <string name="welcome">Welcome</string>
    <string name="repeat_password">repeat password</string>
    <string name="email">email</string>
    <string name="phone_number">Phone Number</string>
    <string name="_register">Register</string>
    <string name="_repeat_password">Repeat_password</string>
    <string name="_email">Email</string>
</resources>