<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regis"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        android:importantForAutofill="no"
        android:inputType="text"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/repassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_baseline_info_24"
        android:drawablePadding="20dp"
        android:hint="@string/_repeat_password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repassword"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:drawableStart="@drawable/ic_baseline_smartphone_24"
        android:drawablePadding="20dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck,TextContrastCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/travelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/number"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/_register"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

</RelativeLayout>